add styles for button

--- a/style.css
+++ b/style.css
@@ -1,3 +1,9 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer components {
+  .btn-primary {
+    @apply py-1.2 px-4.8 bg-grey text-white font-semibold rounded-lg text-center hover:bg-green hover:text-offBlack duration-300 transition-colors;
+  }
+}
